--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -20,7 +20,7 @@
             </span>
 
                 <div>
-                    <p class="text-center">&copy; 2017 Dusan Reljic</p>
+                    <p class="text-center">&copy; 2022 Shopping cart</p>
                 </div>
 
             </div>
